--- a/src/components/BookList.css
+++ b/src/components/BookList.css
@@ -12,7 +12,7 @@
   margin-bottom: 16px;
   text-transform: uppercase;
   color: #eae6ea;
-  background-color:#6a0dad;
+  background-color:#5f5eb8;
   padding: 10px;
   border-radius: 5px;
   text-align: center;
