--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 
 
 nav {
-  background-color: #743061; 
+  background-color: #5f5eb8; 
   padding: 10px 20px;
   border-radius: 5px; 
   height:50px;
