--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -39,6 +39,7 @@ form textarea {
 form button {
   display: inline-block;
   background-color: #036859;
+  width:500px;
   color: white;
   padding: 10px 20px;
   border: none;
