--- a/src/pages/ShowBook.css
+++ b/src/pages/ShowBook.css
@@ -10,6 +10,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 1000px;
   margin: 0 auto;
+  position: relative;
 }
 
 .right-div {
@@ -24,15 +25,15 @@
 }
 
 .right-div p {
-  margin-bottom: 10px;
+
   color: #555;
 }
 
 .right-div img {
   max-width: 80%;
-  height: auto;
+  height: 400px;
   border-radius: 8px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 
 .left-div {
@@ -56,4 +57,54 @@
   color: #1b1a1a;
   padding: 10px;
   border-radius: 4px;
+}
+.actions {
+  position: absolute;
+  top: 0;
+  right: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.actions a,
+.actions button {
+  background-color: #6a0dad;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin:2px;
+  
+}
+
+.actions a{
+    width:30px;
+    height:25px;
+    
+}
+.actions button{
+    width:50px;
+    height:35px;
+}
+.actions a:hover,
+.actions button:hover {
+  background-color: #5a0c9d;
+  
+}
+
+.actions .delete-button {
+  background-color: #ff4d4d;
+}
+
+.actions .delete-button:hover {
+  background-color: #e60000;
+}
+
+.actions svg {
+  margin-right: 5px;
 }
