--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #5f5eb8; 
+  background-color: #706fc0; 
   padding: 10px 20px;
   border-radius: 5px; 
   height: 100px;
