--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #5f5eb8; 
+  background-color: #706fc0; 
   padding: 10px 20px;
   border-radius: 5px; 
   height: 50px;
@@ -30,5 +30,6 @@ nav a:hover {
 nav .welcome {
   font-size: 18px;
   font-weight: bold;
-  margin-right: 70px;
+  margin-right: 50px;
 }
+
