--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,7 +14,7 @@
 .add-book-link a {
   display: inline-flex;
   align-items: center;
-  background-color: #5f5eb8;
+  background-color: #706fc0;
   color: white;
   text-decoration: none;
   padding: 10px 20px;
@@ -28,4 +28,42 @@
 
 .add-book-link a svg {
   margin-right: 8px;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  margin-left: 700px;
+  background-color:#706fc0;
+  height:50px;
+  width:300px;
+  align-self: flex-end;
+  border-radius: 5px;
+  margin-top: -50px;
+}
+
+.search-input {
+  padding: 5px 10px;
+  border: 1px solid #8f3181;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.search-button {
+  background-color: #f8f4f6;
+  color: #2d052c;
+  border: none;
+  padding: 5px 10px;
+  margin-left: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height:30px;
+}
+
+.search-button:hover {
+  background-color: #c35f98;
 }
