--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,20 @@
+
 .App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   background-image: url('./assets/img10.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  min-height: 180vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding:10px;
-  display:flex;
-  flex-direction:column;
+}
+
+
+.content {
+  flex: 1;
+  margin-top: 50px;
+  margin-bottom: 50px; 
+  padding: 10px;
+  overflow-y: auto;
 }
