--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -108,9 +108,9 @@ input[type="checkbox"] {
 .custom-checkbox {
   position: relative;
   display: inline-block;
-  width: 24px;
-  height: 24px;
-  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  margin-right:-100px;
 }
 
 .custom-checkbox input {
@@ -123,8 +123,8 @@ input[type="checkbox"] {
   position: absolute;
   top: 0;
   left: 0;
-  width:33px;
-  height:30px;
+  width:25px;
+  height:25px;
   background-color: #706fc0;
   border-radius: 4px;
   transition: background-color 0.3s;
@@ -133,8 +133,8 @@ input[type="checkbox"] {
 .custom-checkbox input:checked + .checkmark {
   background-color: #706fc0;
   border-radius: 4px;
-  width:33px;
-  height:30px;
+  width:25px;
+  height:25px;
 }
 
 .custom-checkbox .checkmark:after {
@@ -148,11 +148,20 @@ input[type="checkbox"] {
 }
 
 .custom-checkbox .checkmark:after {
-  left: 11px;
-  top: 4px;
-  width: 8px;
-  height: 16px;
+  left: 8px;
+  top: 1px;
+  width: 6px;
+  height: 14px;
   border: solid white;
   border-width: 0 4px 4px 0;
   transform: rotate(45deg);
+}
+.mark-as-read {
+  position: absolute;
+  top: 5px;
+  left:-100px;
+  font-size: 15px;
+  font-weight: 600;
+  color: #4f3e85;
+  width:100px;
 }
