--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,10 +5,13 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  position:relative;
 }
 
-.add-book-link {
-  align-self: flex-start; 
+.add-book-link { 
+  position:absolute;
+  top: -10px;
+  left: 450px;
 }
 
 .add-book-link a {
@@ -36,11 +39,12 @@
   justify-content:center;
   margin-left: 700px;
   background-color:#706fc0;
-  height:50px;
+  height:40px;
   width:300px;
-  align-self: flex-end;
   border-radius: 5px;
-  margin-top: -50px;
+  position:absolute;
+  top: -10px;
+  right: 450px;
 }
 
 .search-input {
